--- a/Fase 2/Client/UI Files/game.ui
+++ b/Fase 2/Client/UI Files/game.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>888</width>
+    <width>850</width>
     <height>554</height>
    </rect>
   </property>
@@ -638,7 +638,7 @@ font: 16pt &quot;Pristina&quot;;</string>
              <number>0</number>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>5</number>
             </property>
             <widget class="QWidget" name="page">
              <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -736,15 +736,108 @@ font: 87 36pt &quot;Arial Black&quot;;</string>
              <property name="styleSheet">
               <string notr="true">background-color: rgb(255, 255, 255);</string>
              </property>
-             <layout class="QVBoxLayout" name="verticalLayout_8">
-              <item>
-               <widget class="QPushButton" name="pushButton">
+             <layout class="QGridLayout" name="gridLayout">
+              <item row="0" column="0">
+               <widget class="QPushButton" name="tab_Size">
                 <property name="styleSheet">
-                 <string notr="true">background-color: rgb(0, 170, 255);
-font: 87 36pt &quot;Arial Black&quot;;</string>
+                 <string notr="true">background-color: rgb(194, 194, 194);
+font: 63 9pt &quot;Noto Serif CJK KR SemiBold&quot;;</string>
                 </property>
                 <property name="text">
-                 <string>5</string>
+                 <string>Tamaño</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLineEdit" name="tab_Size_2"/>
+              </item>
+              <item row="0" column="2" colspan="2">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>3 VIDAS</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="4" colspan="2">
+               <widget class="QLabel" name="label_3">
+                <property name="text">
+                 <string>TOKENS -&gt;</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0" colspan="6">
+               <widget class="QScrollArea" name="scrollArea">
+                <property name="widgetResizable">
+                 <bool>true</bool>
+                </property>
+                <widget class="QWidget" name="scrollAreaWidgetContents">
+                 <property name="geometry">
+                  <rect>
+                   <x>0</x>
+                   <y>0</y>
+                   <width>971</width>
+                   <height>863</height>
+                  </rect>
+                 </property>
+                 <layout class="QGridLayout" name="gridLayout_2">
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_5">
+                    <property name="text">
+                     <string/>
+                    </property>
+                    <property name="pixmap">
+                     <pixmap>../../../archivos/dispersa.png</pixmap>
+                    </property>
+                    <property name="scaledContents">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QPushButton" name="pushButton_8">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(170, 170, 127);</string>
+                </property>
+                <property name="text">
+                 <string>X</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1" colspan="2">
+               <widget class="QLineEdit" name="lineEdit_3">
+                <property name="placeholderText">
+                 <string>Ingrese posicion en X</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="3" colspan="2">
+               <widget class="QPushButton" name="pushButton_9">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(170, 170, 127);</string>
+                </property>
+                <property name="text">
+                 <string>Y</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="5">
+               <widget class="QLineEdit" name="lineEdit_4"/>
+              </item>
+              <item row="3" column="0" colspan="6">
+               <widget class="QPushButton" name="bt_Disparo">
+                <property name="styleSheet">
+                 <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(228, 73, 73, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));</string>
+                </property>
+                <property name="text">
+                 <string>DISPARAR</string>
+                </property>
+                <property name="icon">
+                 <iconset>
+                  <normaloff>../images/shoot.png</normaloff>../images/shoot.png</iconset>
                 </property>
                </widget>
               </item>
