--- a/Fase 2_3/Client/UI Files/shoplist.ui
+++ b/Fase 2_3/Client/UI Files/shoplist.ui
@@ -16,20 +16,24 @@
   <property name="windowTitle">
    <string>Nuevo Libro</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <widget class="QFrame" name="frame">
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(223, 160, 0);</string>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0" colspan="2">
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(223, 160, 0);</string>
+  </property>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Noto Serif CJK KR&quot;;</string>
+        </property>
+        <property name="text">
+         <string>LISTADO DE COMPRAS</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QTableWidget" name="tableWidget">
         <property name="styleSheet">
          <string notr="true">background-color: rgb(241, 241, 241);</string>
@@ -61,44 +65,7 @@
         </column>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="cancelButton">
-        <property name="cursor">
-         <cursorShape>PointingHandCursor</cursorShape>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton
-{	
-	height: 2em;
- 	border-style: solid;
-	border-width: 2px;
- 	border-color: grey;
-	font-weight: bold;
-	background-color: rgb(171, 0, 0);
-	color:&quot;white&quot;;
-}
-
-QPushButton:hover
-{
-   	background-color:grey;
-	color:white;
-}</string>
-        </property>
-        <property name="text">
-         <string>CANCELAR</string>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
+      <item>
        <widget class="QPushButton" name="addButton">
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
@@ -139,13 +106,40 @@ QPushButton:hover
         </property>
        </widget>
       </item>
-      <item row="0" column="0" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-       <widget class="QLabel" name="label">
+      <item>
+       <widget class="QPushButton" name="cancelButton">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="styleSheet">
-         <string notr="true">font: 12pt &quot;Noto Serif CJK KR&quot;;</string>
+         <string notr="true">QPushButton
+{	
+	height: 2em;
+ 	border-style: solid;
+	border-width: 2px;
+ 	border-color: grey;
+	font-weight: bold;
+	background-color: rgb(171, 0, 0);
+	color:&quot;white&quot;;
+}
+
+QPushButton:hover
+{
+   	background-color:grey;
+	color:white;
+}</string>
         </property>
         <property name="text">
-         <string>LISTADO DE COMPRAS</string>
+         <string>CANCELAR</string>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
